# multi-face-video-detection

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: config.json
src/: __init__.py  business_logic.py  utils.py
src/data/: __init__.py  dataset.py
src/model/: __init__.py  model.py  model_utils.py
