[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.13.7"
dependencies = [
    "accelerate>=1.10.1",
    "numpy>=2.3.2",
    "opencv-python-headless==4.10.*",
    "pandas>=2.3.2",
    "scipy>=1.16.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
# Linting + import sorting
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
